<resources>
    <string name="app_name">Registration App</string>
    <string name="title">Registration Form</string>
    <string name="title2">Welcome to Adventure Learning Club!</string>
    <string name="full_name">Full Name:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="student_id">Student ID:</string>
    <string name="school">School:</string>
    <string name="email">E-mail:</string>
    <string name="phone">Phone:</string>
    <string name="register">Register</string>
    
</resources>
